--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <description>HomeWork5</description>
     <properties>
         <java.version>17</java.version>
+        <hikaricp.version>5.1.0</hikaricp.version>
+        <postgresql.version>42.7.1</postgresql.version>
     </properties>
     <dependencies>
         <dependency>
@@ -27,6 +29,19 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>${hikaricp.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
